# RLE-edit-distance-implementation

./: BstNode.cpp  CMakeLists.txt  GeometricView.cpp  binaryTreeRepresentation.cpp  chen_chao_advance.cpp  chen_chao_naive.cpp  common_utils.cpp  gridTable.cpp  main.cpp  minQueue.cpp  naive_dp.cpp  near_optimal_solution.cpp
common/: utils.cpp
common/testing/: geometric_tests.cpp  testing_tools.cpp
solutions/: chen_chao_advance.cpp  chen_chao_naive.cpp  naive_dp.cpp  near_optimal.cpp
structures/: GeometricView.cpp  GridTable.cpp
structures/BST/: BstNode.cpp  BstView.cpp
tests/: testing_tools.cpp
tests/heavy/: test1.in  test10.in  test11.in  test12.in  test13.in  test14.in  test15.in  test16.in  test2.in  test3.in  test4.in  test5.in  test6.in  test7.in  test8.in  test9.in
tests/non-compressed/: test1.in  test10.in  test100.in  test101.in  test102.in  test103.in  test104.in  test105.in  test106.in  test107.in  test108.in  test109.in  test11.in  test110.in  test111.in  test112.in  test113.in  test114.in  test115.in  test116.in  test117.in  test118.in  test119.in  test12.in  test120.in  test121.in  test122.in  test123.in  test124.in  test125.in  test126.in  test127.in  test128.in  test129.in  test13.in  test130.in  test131.in  test132.in  test133.in  test134.in  (+250 more)
tests/random/: test1.in  test10.in  test100.in  test101.in  test102.in  test103.in  test104.in  test105.in  test106.in  test107.in  test108.in  test109.in  test11.in  test110.in  test111.in  test112.in  test113.in  test114.in  test115.in  test116.in  test117.in  test118.in  test119.in  test12.in  test120.in  test121.in  test121.out  (+191 more)
